--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-intl": "*",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0",
-        "moneyphp/money": "^4.5",
-        "ext-intl": "*"
+        "masmerise/livewire-toaster": "^2.2",
+        "moneyphp/money": "^4.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
